tests/baselines/reference/functionOverloads10(strict=true).errors.txt
functionOverloads10.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
functionOverloads10.ts(2,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== functionOverloads10.ts (2 errors) ====
    function foo(foo:string, bar:number);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(foo:string);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(foo:any){ }
    